functioning ace autoform plugin - except for loading and saving content

--- a/meteor-autoform-ace-editor.html
+++ b/meteor-autoform-ace-editor.html
@@ -1,4 +1,3 @@
 <template name="afAceEditor">
-    <pre id="aceEditor"></pre> <!-- todo: this should be replaced with a helper that returns the editor instance id -->
-    {{editorInstance 'aceEditor'}}
+    <pre id="{{editorId}}"></pre>
 </template>
